<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            tools:context=".CustomerRegActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/customer_registration"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        <TextView
                android:id="@+id/cr_first_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:layout_marginTop="20dp"/>
        <EditText
                android:id="@+id/cr_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/cr_last_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/last_name"/>
        <EditText
                android:id="@+id/cr_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/cr_marital_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/marital_status"/>
        <Spinner
                android:id="@+id/cr_marital_status"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        <TextView
                android:id="@+id/cr_employment_status_label"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/employment_status"/>
        <Spinner
                android:id="@+id/cr_employment_status"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        <TextView
                android:id="@+id/cr_employer_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name_of_employer"/>
        <EditText
                android:id="@+id/cr_employer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        <Button android:id="@+id/cr_dob_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="onDob"
                android:text="@string/date_of_birth"/>

        <TextView
                android:id="@+id/cr_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NOT SET"/>

        <TextView
                android:id="@+id/cr_id_card_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/type_of_id_card"/>
        <Spinner
                android:id="@+id/cr_id_card_type"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        <TextView
                android:id="@+id/cr_address_label"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/address"/>
        <EditText
                android:id="@+id/cr_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        <TextView
                android:id="@+id/cr_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/phone_number"/>
        <EditText
                android:id="@+id/cr_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>
        <TextView
                android:id="@+id/cr_principal_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/principal"/>
        <EditText
                android:id="@+id/cr_principal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        <Button
                android:id="@+id/btnLogin"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="onRegister"
                android:text="@string/register"
                android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>