<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:padding="16dp"
              android:layout_height="match_parent">
    <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/admin_login"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    <TextView
            android:id="@+id/secTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="30dp"/>
    <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/thirdTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>
    <EditText
            android:id="@+id/txtPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:onClick="onLogin"
            android:text="@string/login"/>
</LinearLayout>
